# cs184_final_project

./: CMakeLists.txt  build.bat  vcpkg.json
include/: Cloth.h  ClothRender.h  Renderer.h  SimpleMath.h  Water.h  WaterRenderer.h
src/: Cloth.cpp  Coupling.cpp  Coupling.h  Water.cpp  WaterRenderer.cpp  main_visual.cpp
